--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating app</a>
 
-    <ul class="navbar-nav mr-auto" *ngIf="loggedIn">
+    <ul class="navbar-nav mr-auto" *ngIf="currentUser$ | async">
       <li class="nav-item">
         <a class="nav-link" href="#">Matches </a>
       </li>
@@ -16,14 +16,15 @@
         <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
-    <div class="dropdown" *ngIf="loggedIn">
-      <a class="dropdown-toggle text-light">Welcome user</a>
-      <div class="dropdown-menu">
+    <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit profile</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
-    <form *ngIf="!loggedIn" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
+    <form *ngIf="(currentUser$ | async)===null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
       <input
         name = "username"
         [(ngModel)]="model.username"
